--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
                     <div class="logo-text"><span class="txt">ohn Doe</span></div>
                 </div>
                 <div class="nav-items">
-                    <div><a href="#projects">Projects</a></div>
-                    <div><a href="#skills">Skills</a></div>
-                    <div><a href="#contact">Contact Me</a></div>
+                    <div><a href="">Projects</a></div>
+                    <div><a href="">Skills</a></div>
+                    <div><a href="">Contact Me</a></div>
                 </div>
             </div>
             <div class="hero-section">
